fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
   font-family: "Tajawal", sans-serif;
   color: #444444;
   direction: rtl;
+  overflow-x: hidden;
 }
 
 a {
